Begin integration of graph functionality into index.php. Rendering overlap is bugged

--- a/www/css/dash-layout.css
+++ b/www/css/dash-layout.css
@@ -106,6 +106,9 @@
     font-weight: 300px;
 }
 
+#graph-module {
+    min-width: 800px;
+}
 
 .module {
     padding: 20px 20px;
